# CHANGELOG
##############

Version 0.1.*:
--------------
27: Fixed the resource allocation for operams
26: Added number of useable processors to operams
25: Resource allocation for Metaquast added
24: resource allocation for Polypolish added
23: Resource allocation for Medaka added
22: Resource allocation for Racon added
21: Fixed the racon input syntax
20: Separated the racon and medake files
19: Fixed the input/output files for strainy
18: For now, I turned off the ref clustering in operams to see if it works, will turn it on later again
17: renamed the rules from spades_hybrid to spades
16: Adjusted the paths for spades that the hybrid run does not have own subfolder anymore
15: Removed spades_long rule...
14: Added the --meta option for flye and removed genome size
13: Path to OPERA-MS adjusted
12: Typo in the default params setup fixed
11: Added the option --memory for spades
10: Added a rule for polypolish
9: Added a rule for Metaquast
8: Added a rule for Strainy
7: Medaka rule added
6: Racon rule added
5: Added Opera-MS rule
4: Added flye assembler
3: Added spades for long-only assemblies
2: Added spades for hybrid assembly
1: Project started