@@ -3,12 +3,15 @@
 ---
 assemble: "docker://fischuu/hrp_assemble:0.2"
 busco: "docker://fischuu/busco:latest"
+fastp: "docker://fischuu/fastp"
 flye: "docker://fischuu/flye:latest"
 medaka: "docker://fischuu/medaka:latest"
 metaquast: "docker://fischuu/metaquast:latest"
 operams: "docker://fischuu/operams:latest"
+pilon: "docker://fischuu/pilon"
 polypolish: "docker://fischuu/polypolish:latest"
 reads: "docker://fischuu/hrp_reads:0.2"
+seqtk: "docker://fischuu/seqtk:1.3"
 
 #annotate: "docker://fischuu/hrp_annotate:0.4"
 #assemble: "docker://fischuu/hrp_assemble:0.2"
