@@ -27,7 +27,7 @@ resources:
 # Memory allocations in MB for different profiles
     mem_per_cpu:
         veryhighmem: 1400000
-        quitehighmem: 320000
+        quitehighmem: 360000
         highmem: 160000
         lowmem: 16000
 # CPU settings for single thread and multi thread jobs
