@@ -74,11 +74,16 @@ debug("Including subworkflows...")
 
 include: "rules/__functions__.smk"
 include: "rules/folders.smk"
+include: "rules/link.smk"
+#include: "rules/bwa.smk"
+include: "rules/fastp.smk"
 include: "rules/busco.smk"
 include: "rules/flye.smk"
+include: "rules/seqtk.smk"
 include: "rules/metaquast.smk"
 include: "rules/operams.smk"
-include: "rules/polypolish.smk"
+#include: "rules/pilon.smk"
+#include: "rules/polypolish.smk"
 include: "rules/racon.smk"
 include: "rules/medaka.smk"
 include: "rules/spades.smk"
@@ -94,7 +99,7 @@ rule all:
         rules.medaka.input,
         rules.metaquast.input,
         rules.operams.input,
-        rules.polypolish.input,
+#        rules.polypolish.input,
         rules.spades.input,
         rules.strainy.input,
         
