@@ -5,9 +5,13 @@ SCRIPT_FOLDER = os.path.join(config["pipeline_folder"], "workflow", "scripts")
 READS = Path("reads/")
 WD = os.getcwd()
 
+BWA = Path("results/bwa/")
 COMPARE = Path("results/metaquast/")
+FASTP = Path("results/fastp")
 FLYE_LONG = Path("results/flye/")
+SEQTK = Path("results/seqtk/")
 MEDAKA = Path("results/medaka/")
+PILON = Path("results/pilon/")
 OPERAMS_HYBRID = Path("results/operams/")
 POLYPOLISH = Path("results/polypolish/")
 RACON = Path("results/racon/")
